--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "electron-reload": "^1.5.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-react": "^7.22.0",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0"
   }
