--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pomodoro-app",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "A pomodoro app built with electron.js and react.js",
   "main": "public/electron.js",
   "keywords": [
@@ -19,6 +19,8 @@
     "react-build": "react-scripts build",
     "react-test": "react-scripts test",
     "react-eject": "react-scripts eject",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "build": "yarn react-build && electron-builder build --publish never",
     "build-all": "yarn build -mwl",
     "build-mac": "yarn build --mac",
@@ -33,7 +35,6 @@
       "build/**/*"
     ],
     "directories": {
-      "app": "src",
       "buildResources": "assets",
       "output": "release"
     },
@@ -92,9 +93,6 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^1.2.0",
     "react": "^17.0.1",
@@ -103,9 +101,30 @@
     "react-scripts": "4.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "babel-eslint": "^10.1.0",
     "concurrently": "^5.3.0",
     "electron": "^11.2.1",
     "electron-builder": "^22.9.1",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
+    "typescript": "^4.1.3",
     "wait-on": "^5.2.1"
   }
 }
