--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pomodoro-app",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A pomodoro app built with electron.js and react.js",
   "main": "public/electron.js",
   "keywords": [
@@ -123,6 +123,7 @@
     "eslint-plugin-json": "^2.1.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "jest-axe": "^4.1.0",
     "prettier": "^2.2.1",
     "prettier-eslint": "^12.0.0",
     "typescript": "^4.1.3",
