--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: ci
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   release:
@@ -29,5 +33,4 @@ jobs:
         run: |
           yarn package
           yarn lint
-          yarn tsc
           yarn test
